[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Interface/Play.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Fonts/agency-fb-bold_[allfont.es].ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Interface/skins/run.png" type="Texture" id=3]
[ext_resource path="res://Src/SkinSelector.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Interface/flecha siguiente.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[node name="SkinSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.572549, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.451
anchor_top = 0.065
anchor_right = 0.451
anchor_bottom = 0.065
custom_fonts/font = SubResource( 1 )
text = "Skin"

[node name="Button" type="Button" parent="."]
modulate = Color( 0, 0.717647, 0.443137, 1 )
anchor_left = 0.456
anchor_top = 0.769
anchor_right = 0.495
anchor_bottom = 0.785
margin_right = 12.0
margin_bottom = 20.0
rect_scale = Vector2( 0.485578, 0.485578 )
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.533
anchor_top = 0.489
anchor_right = 0.533
anchor_bottom = 0.489
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
scale = Vector2( 0.636461, 0.636461 )
texture = ExtResource( 3 )
vframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 2 )

[node name="Der" type="Button" parent="."]
anchor_left = 0.77
anchor_top = 0.393
anchor_right = 0.787
anchor_bottom = 0.393
rect_scale = Vector2( 0.284533, 0.284533 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Izq" type="Button" parent="."]
anchor_left = 0.262
anchor_top = 0.59
anchor_right = 0.262
anchor_bottom = 0.59
rect_rotation = 180.0
rect_scale = Vector2( 0.284533, 0.284533 )
icon = ExtResource( 5 )
flat = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Der" to="." method="_on_Der_pressed"]
[connection signal="pressed" from="Izq" to="." method="_on_Izq_pressed"]
